added brand card and styled navbar and menu items

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --navbar-width: 420px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,8 +18,8 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -32,4 +33,13 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.navbar {
+  width: var(--navbar-width);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  border-radius: 8px;
 }
